tests/paczka2/big_fuzzy/58210118.err
Error in line 3: nOhOv A797 17,9
Error in line 5: gk1YF S304 77,0
Error in line 10: nOhOv S479 96,0
Error in line 14: nvLP5m S479 9,7
Error in line 21: nOhOv S479 39,65
Error in line 28: cIQ S304 171,9
Error in line 22: 9Pu2QN S781 30,4
Error in line 34: S304 S47M 53,1
Error in line 41: POvSFM S304 65,5
Error in line 37: gk1YF A797 150,4
Error in line 52: POvSFM A797 4,4
Error in line 66: POvSFM S781 166,0
Error in line 64: nOhOv S781 73,5
Error in line 71: nOhOv S479 11,4
Error in line 72: S304 S479 79,5
Error in line 86: POvSFM S781 79,7
Error in line 89: 9Pu2QN S781 90,6
Error in line 96: S304 S304 51,6
Error in line 95: gk1YF A797 30,1
Error in line 93: 9Pu2QN A797 82,7
Error in line 97: S304 S479 39,2
Error in line 110: gk1YF S304 33,2
Error in line 112: gk1YF S479 47,3
Error in line 127: gk1YF A797 45,2
Error in line 131: cIQ S479 60,9
Error in line 129: gk1YF S781 85,6
Error in line 138: S304 S479 1,9
Error in line 136: cIQ S304 44,8
Error in line 141: cIQ S344 16,6
Error in line 165: cIQ A797 9,15
Error in line 149: cIQ S304 56,1
Error in line 171: nvLP5m S781 1,84
Error in line 147: S304 S304 20,7
Error in line 154: 9Pu2QN S304 27,6
Error in line 175: S304 A797 45,1
Error in line 194: nOhOv S304 36,7
Error in line 185: POvSFM S304 69,9
Error in line 189: nvLP5m S781 1,8
Error in line 202: cIQ A797 6B,1
Error in line 213: POvSFM A797 51,2
Error in line 216: cIQ A797 190,0
Error in line 217: POvSFM S304 16,1
Error in line 227: POvSFM S304 25,0
Error in line 233: cIQ S781 85,1
Error in line 237: cIQ S304 32,8
Error in line 231: POvSFM S479 84,4
